04-pagar-ms/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pagar-ms
  namespace: pagar-ms-namespace
spec:
  selector:
    app: pagar-ms
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
